--- a/styles/home.css
+++ b/styles/home.css
@@ -1,11 +1,9 @@
 body{
-    margin: 0px;
-    width: 100%;
-    height: 100%;
     background-color: #333;
    }
-   
-  div {
-    width: 100vw;
-    height: 100vh;
-  }
+
+p, h1, h2, h3, h4{
+    color: aliceblue    ;
+
+
+}
